--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table Reservation</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 
-    <h1>Table Reservation</h1>
+    <h1>Table Reservation Form</h1>
 
-    <% if (!selectedTable) { %>
-        <form action="/select-table" method="POST">
-            <fieldset>
-                <legend>Choose a table:</legend>
-                <% tables.forEach(table => { %>
-                    <input type="radio" id="table_<%= table.id %>" name="tableId" value="<%= table.id %>" required>
-                    <label for="table_<%= table.id %>">
-                        <%= table.tablename %> - <%= table.places %> seats (Room: <%= table.roomname %>)
-                    </label><br>
-                <% }); %>
-            </fieldset>
-            <button type="submit">Next</button>
-        </form>
-    <% } %>
+    <form action="/select-table" method="POST">
+        <fieldset>
+            <legend>Choose a table:</legend>
+            <% tables.forEach(table => { %>
+                <input type="radio" id="table_<%= table.id %>" name="tableId" value="<%= table.id %>" required>
+                <label for="table_<%= table.id %>">
+                    <%= table.tablename %> - <%= table.places %> seats (Room: <%= table.roomname %>)
+                </label><br>
+            <% }); %>
+        </fieldset>
+        <button type="submit">Next</button>
+    </form>
 
-    <% if (selectedTable && availableDates.length > 0) { %>
+    <% if (selectedTable) { %>
         <h2>Table <%= selectedTable.tablename %> Selected</h2>
 
+        <!-- Step 2: Select Date -->
         <form action="/select-date" method="POST">
             <input type="hidden" name="tableId" value="<%= selectedTable.id %>">
             <fieldset>
@@ -41,12 +41,11 @@
     <% } %>
 
     <% if (availableTimes.length > 0) { %>
-        <h2>Select a Time</h2>
-
+        <!-- Step 3: Select Time -->
         <form action="/reserve" method="POST">
             <input type="hidden" name="selectedTable" value="<%= selectedTable.id %>">
-            <input type="hidden" name="selectedDate" value="<%= selectedDate %>">
-
+            <input type="hidden" name="selectedDate" value="<%= availableDates[0] %>">
+            
             <fieldset>
                 <legend>Select a Time:</legend>
                 <% availableTimes.forEach(time => { %>
@@ -55,8 +54,20 @@
                 <% }); %>
             </fieldset>
 
-            <label>Name: <input type="text" name="name" required></label><br>
-            <label>Email: <input type="email" name="email" required></label><br>
+            <!-- Step 4: Number of Guests -->
+            <label for="numPeople">Guests:</label>
+            <select name="numPeople" id="numPeople">
+                <% for (let i = 1; i <= selectedTable.places; i++) { %>
+                    <option value="<%= i %>"><%= i %></option>
+                <% } %>
+            </select>
+
+            <!-- Step 5: User Details -->
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
 
             <button type="submit">Reserve</button>
         </form>
