--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,13 @@
               id="menu-icon"
             />
             <div class="links" id="nav-links">
-              <a href="#news">News</a>
+              <a> <%= user.isAdmin ? 'Admin' : '' %> </a>
+              <% if(user.isLoggedIn){%>
+               <a>Hallo <%= user.userName%></a> 
+               <a href="/logout">Log-Out</a>
+              <%}else{%>
+                <a href="/login">Log-In</a>
+              <%}%>
               <a href="#contact">Contact</a>
               <a href="#about">About</a>
               <a href="/reserve" class="reserve-button">Reservierung</a>
@@ -74,16 +80,36 @@
         </div>
         <% }); %>
       </fieldset>
+
       <label for="numPeople">Guests:</label>
       <select name="numPeople" id="numPeople" required>
         <% for (let i = 1; i <= selectedTable.places; i++) { %>
         <option value="<%= i %>"><%= i %></option>
         <% } %></select
       ><br />
+      <% if (user.userName && user.userEmail) { %>
+      <label for="name">Name:</label>
+      <input
+        type="text"
+        id="name"
+        name="name"
+        required
+        value="<%=user.userName%>"
+      /><br />
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        required
+        value="<%=user.userEmail%>"
+      /><br />
+      <% } else {%>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required /><br />
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required /><br />
+      <%}%>
       <button type="submit">Reserve</button>
     </form>
     <% } else if (selectedTable) { %>
