--- a/views/booked.ejs
+++ b/views/booked.ejs
@@ -3,42 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table Reservation</title>
+    <title>Tisch Reservierung</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <h1>Hello</h1>
-    <div class="section">
-      <div class="container">
-        <div class="navigation" id="navigation">
-          <div class="logo">
-            <a href="/">Home</a>
-          </div>
-          <div class="nav-right">
-            <img
-              src="/images/Nav-Bar-Icon.svg"
-              alt="Menu Icon"
-              class="menu-icon"
-              id="menu-icon"
-            />
-            <div class="links" id="nav-links">
-              <a> <%= user.isAdmin ? 'Admin' : '' %> </a>
-              <% if(user.isLoggedIn){%>
-              <a>Hallo <%= user.userName%></a>
-              <a href="/logout">Log-Out</a>
-              <%}else{%>
-              <a href="/login">Log-In</a>
-              <%}%> <% if(user.isAdmin){%>
-              <a href="/newBlog">new Blog</a>
-              <%}%>
-              <a href="#contact">Contact</a>
-              <a href="#about">About</a>
-              <a href="/reserve" class="reserve-button">Reservierung</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%- include('partials/header') %>
     <div class="Booked">
       <h1>
         Deine Reservierung von Tisch <%=user.selectedTable%> war erfolgreich.
