--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,53 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Log-In Area</title>
+    <title>Registrierungs</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="section">
-      <div class="container">
-        <div class="navigation" id="navigation">
-          <div class="logo">
-            <a href="/">Home</a>
-          </div>
-          <div class="nav-right">
-            <img
-              src="/images/Nav-Bar-Icon.svg"
-              alt="Menu Icon"
-              class="menu-icon"
-              id="menu-icon"
-            />
-            <div class="links" id="nav-links">
-              <a href="/login">Log-In</a>
-              <a href="#contact">Contact</a>
-              <a href="#about">About</a>
-              <a href="/reserve" class="reserve-button">Reservierung</a>
-            </div>
-          </div>
+    <%- include('partials/header') %>
+    <div class="container">
+      <h1>Register</h1>
+      <!-- Makes POST request to /register route -->
+      <form action="/register" method="POST">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" name="name" />
         </div>
-        <div class="container">
-          <h1>Register</h1>
-          <!-- Makes POST request to /register route -->
-          <form action="/register" method="POST">
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" class="form-control" name="name" />
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="username" />
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" />
-            </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" name="username" />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" />
+        </div>
 
-            <button type="submit" class="btn btn-dark">Register</button>
-          </form>
-        </div>
-      </div>
+        <button type="submit" class="btn btn-dark">Register</button>
+      </form>
     </div>
+
     <script src="/js/slide.js"></script>
     <script src="/js/navToggle.js"></script>
   </body>
