--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,24 +20,7 @@
     </div>
     <div class="Register">
       <h1>Noch nicht registriert?</h1>
-      <p>Registriere dich hier!</p>
-      <form action="/register" method="POST">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" name="name" />
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" name="username" />
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" />
-        </div>
-
-        <button type="submit" class="btn btn-dark">Register</button>
-      </form>
-    </div>
+      <a href="/register">Registriere dich hier!</a>
     <script src="/js/slide.js"></script>
     <script src="/js/navToggle.js"></script>
   </body>
