--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,19 +12,20 @@
           id="menu-icon"
         />
         <div class="links" id="nav-links">
-          <a> <%= user.isAdmin ? 'Admin' : '' %> </a>
-          <% if(user.isLoggedIn){%>
-           <a>Hallo <%= user.userName%></a> 
-           <a href="/logout">Log-Out</a>
-          <%}else{%>
-            <a href="/login">Log-In</a>
-          <%}%>
           <% if(user.isAdmin){%>
-            <a href="/newBlog">Neuer Blog</a>
+          <a href="/"> <%= user.isAdmin ? 'Admin' : '' %> </a>
+          <a href="/allReservations">Alle Reservierungen</a>
+          <a href="/newBlog">Neuer Blog</a>
+          <%}%> 
+          <% if(user.isLoggedIn){%>
+          <a href="/">Hallo <%= user.userName%></a>
+          <a href="/logout">Log-Out</a>
+          <%}else{%>
+          <a href="/login">Log-In</a>
+          <a href="/register">Registrierung</a>
           <%}%>
           <a href="/blog">Blog</a>
-          <a href="/register">Registrierung</a>
-          <a href="/reserve" class="reserve-button">Reservierung</a>
+          <a href="/reservation" class="reserve-button">Reservierung</a>
         </div>
       </div>
     </div>
