--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -30,6 +30,7 @@
       }
       .card img {
         width: 100%;
+        max-height: 400px;
         display: block;
       }
       .card-content {
