--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -82,9 +82,9 @@
       /><br />
       <% } else {%>
       <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required /><br />
+      <input type="text" id="name" name="name" value="" required /><br />
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required /><br />
+      <input type="email" id="email" name="email" value="" required /><br />
       <%}%>
       <button type="submit">Reserve</button>
     </form>
