changed up the code, so we use sessions for each user and store data on each user and session

--- a/views/booked.ejs
+++ b/views/booked.ejs
@@ -10,28 +10,30 @@
     <%- include('partials/header') %>
     <div class="Booked">
       <h1>
-        Deine Reservierung von Tisch <%=user.selectedTable%> war erfolgreich.
+        Deine Reservierung von Tisch <%=selectedTable%> war erfolgreich.
       </h1>
       <p>
         Dein Termin ist am <%= new
-        Date(user.selectedDate).toLocaleDateString('de-DE', { weekday: 'short',
+        Date(selectedDate).toLocaleDateString('de-DE', { weekday: 'short',
         year: 'numeric', month: 'short', day: 'numeric' }) %> zwischen
-        <%=user.selectedTime%> Uhr.
+        <%=selectedTime%> Uhr.
       </p>
-      <p>Wir freuen uns auf deinen Besuch <%=user.selectedName%>.</p>
+      <p>Wir freuen uns auf deinen Besuch <%=user.name%>.</p>
       <!-- Button to download calendar event -->
       <button
         id="download-ics"
-        data-name="<%= user.selectedName %>"
-        data-date="<%= user.selectedDate %>"
-        data-time="<%= user.selectedTime %>"
+        data-name="<%= user.name %>"
+        data-date="<%= selectedDate %>"
+        data-time="<%= selectedTime %>"
       >
         Termin in Kalender speichern
       </button>
     </div>
-
     <script src="/js/slide.js"></script>
     <script src="/js/navToggle.js"></script>
     <script src="/js/downloadICS.js"></script>
+    <script>
+      
+    </script>
   </body>
 </html>
