--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
           <a href="/newBlog">Neuer Blog</a>
           <%}%> 
           <% if(user.isLoggedIn){%>
-          <a href="/">Hallo <%= user.userName%></a>
+          <a href="/">Hallo <%= user.name%></a>
           <a href="/logout">Log-Out</a>
           <%}else{%>
           <a href="/login">Log-In</a>
