--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -63,14 +63,14 @@
         <option value="<%= i %>"><%= i %></option>
         <% } %></select
       ><br />
-      <% if (user.userName && user.userEmail) { %>
+      <% if (user.isLoggedIn) { %>
       <label for="name">Name:</label>
       <input
         type="text"
         id="name"
         name="name"
         required
-        value="<%=user.userName%>"
+        value="<%=user.name%>"
       /><br />
       <label for="email">Email:</label>
       <input
@@ -78,7 +78,7 @@
         id="email"
         name="email"
         required
-        value="<%=user.userEmail%>"
+        value="<%=user.email%>"
       /><br />
       <% } else {%>
       <label for="name">Name:</label>
