--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -9,7 +9,7 @@
   <body>
     <%- include('partials/header') %>
 
-    <h1>Table Reservation Form</h1>
+    <h1>Tisch Reservierung</h1>
 
     <% if (!selectedTable) { %>
     <!-- Table Selection: Each button submits the tableId -->
