--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,41 @@
-
-
-</body>
-</html>
+  <div class="flex-footer">
+    <div class="first-row">
+      <div class="left-footer">
+        <div>
+          <h4>LOGO</h4>
+          <p>Webseite meines Kaffees in Rosenthal - Berlin</p>
+        </div>
+      </div>
+      <div class="right-footer">
+        <div>
+          <h4>Unternehmen</h4>
+          <a>Über Uns</a>
+          <a>Kontakt</a>
+        </div>
+        <div>
+          <h4>Funktionen</h4>
+          <a href="/reservation">Tisch Reservierung</a>
+          <a href="/event">Event Buchung</a>
+          <a href="/blog">Veranstaltungen</a>
+        </div>
+        <div>
+          <h4>Kontakt</h4>
+          <a href="">manu@mail.com</a>
+          <a href="">030-47488482</a>
+          <a href="">Hauptstraße 155, 13158 Berlin</a>
+        </div>
+      </div>
+    </div>
+    <div class="second-row">
+      <div class="flex-row">
+        <div>
+            <p>© Zur alten Backstube 2025</p>
+        </div>
+        <div class="right-footer end-footer">
+            <a href="/impressum">Impressum</a>
+            <a href="/datenschutz">Datenschutz</a>
+            <a href="/agb">AGB</a>
+        </div>
+      </div>
+    </div>
+  </div>
