changed iamges name for stars

--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -29,8 +29,7 @@
                 <div class="topic"><%= table.tablename %></div>
                 <div class="des">
                   <!-- lorem 50 -->
-                  Der Tisch befindet sich links vom Eingang direkt am Fenster
-                  mit Blick nach draußen.
+                  <%= table.description %>
                 </div>
                 <div class="buttons">
                   <button type="submit" name="tableId" value="<%= table.id %>">
