--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,7 +111,7 @@
           <div class="slider-mask">
             <div class="slide">
               <div class="testimonial-card">
-                <img src="/images/stars.svg" alt="Bewertungssterne" />
+                <img src="/images/Stars.svg" alt="Bewertungssterne" />
                 <p>
                   Man wird sehr herzlich empfangen, der Garten und die beiden
                   Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
